--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: objective-c
 osx_image: xcode7.3
 xcode_project: Travel.xcodeproj
 xcode_scheme: Travel
+xcode_sdk: iphonesimulator9.3
 
 script:
   - xcodebuild -version
