--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,9 @@ osx_image: xcode7.3
 xcode_project: Travel.xcodeproj
 xcode_scheme: Travel
 xcode_sdk: iphonesimulator9.3
+
+script:
+  - set -o pipefail
+  - xcodebuild -version
+  - xcodebuild -showsdks
+  - xcodebuild test -scheme Travel -sdk iphonesimulator9.3 | xcpretty -c
